# AgenShield-AI

./: .gitignore  README.md  index.html  project abstract.docx
Habitat-AI/: Habitat AI.docx  document.md  index.html
backend/: .env.example  main.py  pyproject.toml
backend/agentshield/: __init__.py  __main__.py  cli.py
backend/agentshield/agents/: __init__.py
backend/agentshield/knowledge_base/: __init__.py
backend/agentshield/parsers/: __init__.py  cfn_parser.py  k8s_parser.py  line_loader.py  schemas.py  tf_parser.py
backend/agentshield/utils/: __init__.py  checkov_runner.py
backend/infrastructure/cloudformation/: s3_bucket.json
backend/infrastructure/kubernetes/: pod_root.yaml
backend/infrastructure/terraform/: main.tf
backend/tests/: __init__.py  test_checkov_runner.py  test_cli.py  test_parsers.py  tf_parser_test.py
backend/tests/fixtures/terraform/: sample.tf
