[project]
name = "agentshield-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "checkov>=3.3.6",
    "click>=8.4.2",
    "langchain>=1.3.11",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "bc-python-hcl2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
